--- a/become-customer.html
+++ b/become-customer.html
@@ -135,7 +135,7 @@
 									<i class="fa fa-building-o"></i>
 									<div class="instruction">
 										<p class="title-instruction">Mail</p>
-										<p class="sub-title-instruction">Office Supply Tech Inc.
+										<p class="sub-title-instruction">Info Concept.
 								            <br>20920 Sheridan Street, Fort Lauderdale, FL 33332
 								        </p>
 									</div>
@@ -208,7 +208,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-xs-12 col-sm-6">
-								<p>Copyright 2017 <span>Office Supply Tech Inc.</span> | All Rights Reserved</p>
+								<p>Copyright 2017 <span>Info Concept.</span> | All Rights Reserved</p>
 							</div>
 							<div class="col-xs-12 col-sm-6">
 								<span style="float:right"><!--SiteSeal Html Builder Code: 
