--- a/contact-us/form.html
+++ b/contact-us/form.html
@@ -474,7 +474,7 @@ div.thumbnail .glyphicon-ok-circle{
           <div class="container">
             <div class="row">
               <div class="col-xs-12 col-sm-6">
-                <p>Copyright 2017 <span>Office Supply Tech Inc.</span> | All Rights Reserved</p>
+                <p>Copyright 2017 <span>Info Concept.</span> | All Rights Reserved</p>
               </div>
               <div class="col-xs-12 col-sm-6">
 								<span style="float:right"><!--SiteSeal Html Builder Code: 
