--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						<div class="container">
 							<div class="row">
 								<div class="col-xs-12 col-sm-6">
-									<h2>Welcome To Office Supply Tech Inc</h2>
+									<h2>Welcome To Info Concept</h2>
 									<p>Whether you are looking for Printers, Copiers, Ink and Toner Cartridges, Maintenance Kits or Storage Media Products, you will find an excellent selection at great prices and world class customer service.</p>
 									<p>We stock a huge selection of products for most popular brands allowing us to provide you with exactly what you need when you need it!</p>
 									<p>Office Supply Tech is proud to serve businesses throughout the world.</p>
@@ -282,7 +282,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-xs-12 col-sm-6">
-								<p>Copyright 2017 <span>Office Supply Tech Inc.</span> | All Rights Reserved</p>
+								<p>Copyright 2017 <span>Info Concept.</span> | All Rights Reserved</p>
 							</div>
 							<div class="col-xs-12 col-sm-6">
 								<span style="float:right"><!--SiteSeal Html Builder Code: 
