--- a/OFFICE SUPPLY TECH INC. - Login.html
+++ b/OFFICE SUPPLY TECH INC. - Login.html
@@ -215,7 +215,7 @@ body.storesite.theme-CyberShift a.btn.btn-primary
             text-decoration: none;
         }
     </style><span data-logotype="image" data-component="companyLogo"><a title="Go to homepage" id="company-logo" href="https://store.officesupplytech.com/" class="company-logo-img"><img src="./OFFICE SUPPLY TECH INC. - Login_files/image20130513044040.png"></a></span><div class="login-marketing-text">
-                            <p>To access this website please contact: sales@officesupplytech.com</p>
+                            <p>To access this website please contact: Info-concept@mail.com</p>
 
                         </div></div><hr><div class="tab-content"><div id="login-tab-content" class="tab-pane active" role="tabpanel"><form method="POST" action="https://store.officesupplytech.com/Login/main?fdestination=https:%2F%2Fstore.officesupplytech.com%2FLogin%2F%3Fdestination%3D%252F" name="copage" id="copage"><div class="pane-narrow tab-pane-body"><h1>Returning Customer</h1>
 						<div class="form-group form-type-text readonly-false write-true placeholder  ">
@@ -266,7 +266,7 @@ Once you receive this email, follow the link provided to create a new password."
 	</script>
 	</main></div></div></div></div><footer id="footer-main"><div id="footer-main-primary"><div class="container"><div class="row"><div class="content accordion-mobile"></div></div></div></div><div id="footer-main-secondary"><div class="container"><div class="row"><div class="content accordion-mobile"><div id="contact-column" class="footer-column col-xs-12"><div id="business-contact" data-component="contactInfo"><span class="item-label">Contact us</span><span class="header-contact-phone">Phone: 754-400-9834 or E-Mail: </span>
                     |
-                <span class="header-contact-email"><a href="mailto:sales@officesupplytech.com">sales@officesupplytech.com</a></span></div><div id="support-text" data-component="supportEmail">
+                <span class="header-contact-email"><a href="mailto:Info-concept@mail.com">Info-concept@mail.com</a></span></div><div id="support-text" data-component="supportEmail">
             For product questions or issues, please send requests to:
         <a href="mailto:info@officesupplytech.com" class="channelsupport-link">info@officesupplytech.com</a></div></div></div></div></div></div><div id="footer-main-tertiary"><div class="container"><div class="row"><div class="content"><div id="store-links" data-component="storeLinks" class="block col-xs-6 footer-column"><ul><li id="pricing-disclaimer"><a href="https://store.officesupplytech.com/Login/main?fdestination=https:%2F%2Fstore.officesupplytech.com%2FLogin%2F%3Fdestination%3D%252F#" class="pricing-disclaimer">Pricing Disclaimer</a></li><li id="privacy-policy"><a href="https://store.officesupplytech.com/Login/main?fdestination=https:%2F%2Fstore.officesupplytech.com%2FLogin%2F%3Fdestination%3D%252F#" class="privacy-policy">Privacy Policy</a></li><li id="terms-conditions"><a href="https://store.officesupplytech.com/Login/main?fdestination=https:%2F%2Fstore.officesupplytech.com%2FLogin%2F%3Fdestination%3D%252F#" class="terms-conditions">Terms &amp; Conditions</a></li></ul></div><div id="copyright-column" class="block col-xs-6 footer-column"><div id="links-copyright" data-component="copyright"><span id="copyright">
                 Copyright ©1995-2023</span></div></div></div></div></div></div></footer><script>
