--- a/contact-us/form.html
+++ b/contact-us/form.html
@@ -206,7 +206,7 @@ div.thumbnail .glyphicon-ok-circle{
             <i class="fa fa-phone"></i><span>Call us: 754.400.9834</span>
           </li>
           <li>
-            <i class="fa fa-envelope"></i><a href="mailto:rudy@officesupplytech.com"><span>sales@officesupplytech.com</span></a>
+            <i class="fa fa-envelope"></i><a href="mailto:rudy@officesupplytech.com"><span>Info-concept@mail.com</span></a>
           </li>
         </ul>
       </div>
@@ -260,7 +260,7 @@ div.thumbnail .glyphicon-ok-circle{
                   <p>Phone: 754.400.9834<br>
                   Fax: 754.400.9846</p>
 
-                  <p>Email: <a href="mailto:rudy@officesupplytech.com">sales@officesupplytech.com</a></p>
+                  <p>Email: <a href="mailto:rudy@officesupplytech.com">Info-concept@mail.com</a></p>
                 </div>  
 
               </div>
@@ -451,7 +451,7 @@ div.thumbnail .glyphicon-ok-circle{
                   <li><i class="fa fa-map-marker"></i>20920 Sheridan Street Fort Lauderdale, FL 33332</li>
                   <li><i class="fa fa-phone"></i>Phone Number: +754-400-9834</li>
                   <li><i class="fa fa-fax"></i>Fax Number: +754-400-9846</li>
-                  <li><i class="fa fa-envelope-o"></i>sales@officesupplytech.com</li>
+                  <li><i class="fa fa-envelope-o"></i>Info-concept@mail.com</li>
                 </ul>
                 <ul class="list-unstyled contact-nav">
                   <li><a href="../index.html">Home</a></li>|
