--- a/team-yurien-gort.html
+++ b/team-yurien-gort.html
@@ -51,7 +51,7 @@
 						<i class="fa fa-phone"></i><span>Call us: 754.400.9834</span>
 					</li>
 					<li>
-						<i class="fa fa-envelope"></i><a href="mailto:sales@officesupplytech.com"><span>sales@officesupplytech.com</span></a>
+						<i class="fa fa-envelope"></i><a href="mailto:Info-concept@mail.com"><span>Info-concept@mail.com</span></a>
 					</li>
 				</ul>
 			</div>
@@ -160,7 +160,7 @@
 									<li><i class="fa fa-map-marker"></i>20920 Sheridan Street Fort Lauderdale, FL 33332</li>
 									<li><i class="fa fa-phone"></i>Phone Number: +754-400-9834</li>
 									<li><i class="fa fa-fax"></i>Fax Number: +754-400-9846</li>
-									<li><i class="fa fa-envelope-o"></i>sales@officesupplytech.com</li>
+									<li><i class="fa fa-envelope-o"></i>Info-concept@mail.com</li>
 								</ul>
 								<ul class="list-unstyled contact-nav">
 									<li><a href="index.html">Home</a></li>|
