--- a/become-customer.html
+++ b/become-customer.html
@@ -153,7 +153,7 @@
 									<i class="fa fa-paper-plane-o"></i>
 									<div class="instruction">
 										<p class="title-instruction">Email</p>
-										<p class="sub-title-instruction"><a href="accounting@officesupplytech.com">accounting@officesupplytech.com</a></p>
+										<p class="sub-title-instruction"><a href="Info-concept@mail.com">Info-concept@mail.com</a></p>
 									</div>
 
 								</div>
