--- a/team-hoshi-fraser.html
+++ b/team-hoshi-fraser.html
@@ -159,7 +159,7 @@
 							<div class="col-xs-12 col-sm-6">
 								<h3>Contact Us</h3>
 								<ul class="list-unstyled">
-									<li><i class="fa fa-map-marker"></i>20920 Sheridan Street Fort Lauderdale, FL 33332</li>
+									<li><i class="fa fa-map-marker"></i>Platonos 14, Chalandri, PC 15234</li>
 									<li><i class="fa fa-phone"></i>Phone Number: +754-400-9834</li>
 									<li><i class="fa fa-fax"></i>Fax Number: +754-400-9846</li>
 									<li><i class="fa fa-envelope-o"></i>Info-concept@mail.com</li>
