--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<script src='https://www.google.com/recaptcha/api.js'></script>
 	
 		
-		<title>Office Supply Tech | Where we have everything for your office</title>
+		<title>Info Concept | Where we have everything for your office</title>
 
 	</head>
 	<body>
@@ -120,7 +120,7 @@
 									<h2>Welcome To Info Concept</h2>
 									<p>Whether you are looking for Printers, Copiers, Ink and Toner Cartridges, Maintenance Kits or Storage Media Products, you will find an excellent selection at great prices and world class customer service.</p>
 									<p>We stock a huge selection of products for most popular brands allowing us to provide you with exactly what you need when you need it!</p>
-									<p>Office Supply Tech is proud to serve businesses throughout the world.</p>
+									<p>Info Concept is proud to serve businesses throughout the world.</p>
 								</div>
 							</div>
 						</div>
