--- a/become-customer.html
+++ b/become-customer.html
@@ -20,7 +20,7 @@
 		<script src='https://www.google.com/recaptcha/api.js'></script>
 		<script language="JavaScript" src="https://seal.networksolutions.com/siteseal/javascript/siteseal.js" type="text/javascript"></script> 
 		
-		<title>Office Supply Tech | Where we have everything for your office</title>
+		<title>Info Concept | Where we have everything for your office</title>
 
 	</head>
 	<body>
@@ -84,7 +84,7 @@
 								<i class="fa fa-handshake-o"></i>
 							</div> -->
 							<div class="col-xs-12 subheadline">
-								<p>Thank you for your interest in becoming an Office Supply Tech customer. 
+								<p>Thank you for your interest in becoming an Info Concept customer. 
 									Getting your account approved is the first step.</p>
 								<p>To open an account, follow these simple steps:</p>
 							</div>
@@ -163,7 +163,7 @@
 
 							<div class="col-xs-12 notes">
 								<hr>	
-								<p>If your application is complete, Office Supply Tech will process your credit application the same 	day it is received 
+								<p>If your application is complete, Info Concept will process your credit application the same 	day it is received 
 				                  	we will contact you once your account is established.</p>                                                                                                                                 
 									<p>If the application is incomplete, we will contact you regarding missing information, this may delay the credit process.</p>
 
