--- a/team-jainel-zamora.html
+++ b/team-jainel-zamora.html
@@ -26,7 +26,7 @@
 		</script>
 		<script language="JavaScript" src="https://seal.networksolutions.com/siteseal/javascript/siteseal.js" type="text/javascript"></script> 
 		
-		<title>Office Supply Tech | Where we have everything for your office</title>
+		<title>Info Concept | Where we have everything for your office</title>
 
 	</head>
 	<body>
