--- a/become-customer.html
+++ b/become-customer.html
@@ -136,7 +136,7 @@
 									<div class="instruction">
 										<p class="title-instruction">Mail</p>
 										<p class="sub-title-instruction">Info Concept.
-								            <br>20920 Sheridan Street, Fort Lauderdale, FL 33332
+								            <br>Platonos 14, Chalandri, PC 15234
 								        </p>
 									</div>
 									
