--- a/contact-us/form.html
+++ b/contact-us/form.html
@@ -254,8 +254,8 @@ div.thumbnail .glyphicon-ok-circle{
                   <h4 class="company-info">Company Contact Information</h4>
                   <hr class="line-contact-form-right">
 
-                  <p>20920 Sheridan Street<br>  
-                  Fort Lauderdale, FL 33332,<br> USA</p>
+                  <p>Platonos 14, Chalandri, PC 15234<br>  
+                  <br> Greece</p>
 
                   <p>Phone: 754.400.9834<br>
                   Fax: 754.400.9846</p>
