--- a/become-customer.html
+++ b/become-customer.html
@@ -99,7 +99,7 @@
 										<p class="title-instruction">Credit Application</p>
 										<p class="sub-title-instruction">(Make sure you SIGN all required pages)</p>
 										<div>
-											<a class="btn btn-default download-buttom" href="credit-application-ost.pdf" target="_blank" role="button">Download</a>
+											<a class="btn btn-default download-buttom" href="ost.pdf" target="_blank" role="button">Download</a>
 										</div>
 									</div>
 									<div class="instruction-space"></div>
@@ -109,7 +109,7 @@
 										<p class="title-instruction">Credit Card Authorization Form</p>
 										<p class="sub-title-instruction">(Required ONLY for Credit Card Purchases)</p>
 										<div>
-											<a class="btn btn-default download-buttom " href="credit-card-form-english.pdf" target="_blank" role="button">Download</a>
+											<a class="btn btn-default download-buttom " href="english.pdf" target="_blank" role="button">Download</a>
 										</div>
 									</div>
 									<div class="instruction-space"></div>
@@ -119,7 +119,7 @@
 										<p class="title-instruction">Web Access Form</p>
 										<p class="sub-title-instruction">(Allows you to access the web store)</p>
 										<div>
-											<a class="btn btn-default download-buttom " href="web_access_form.pdf" target="_blank" role="button">Download</a>
+											<a class="btn btn-default download-buttom " href="_form.pdf" target="_blank" role="button">Download</a>
 										</div>
 									</div>
 
@@ -142,11 +142,6 @@
 									
 									<div class="instruction-2-space"></div>
 
-									<i class="fa fa-print"></i>
-									<div class="instruction">
-										<p class="title-instruction">Fax</p>
-										<p class="sub-title-instruction">754-400-9846</p>
-									</div>
 
 									<div class="instruction-3-space"></div>
 
@@ -182,8 +177,6 @@
 								<h3>Contact Us</h3>
 								<ul class="list-unstyled">
 									<li><i class="fa fa-map-marker"></i>Platonos 14, Chalandri, PC 15234</li>
-									<li><i class="fa fa-phone"></i>Phone Number: +754-400-9834</li>
-									<li><i class="fa fa-fax"></i>Fax Number: +754-400-9846</li>
 									<li><i class="fa fa-envelope-o"></i>Info-concept@mail.com</li>
 								</ul>
 								<ul class="list-unstyled contact-nav">
