--- a/contact-us/OFFICE SUPPLY TECH INC. - Login.html
+++ b/contact-us/OFFICE SUPPLY TECH INC. - Login.html
@@ -264,7 +264,7 @@ Once you receive this email, follow the link provided to create a new password."
 		   CommonUtil.set_state(storage_productsearchresultselections, '');
 		});
 	</script>
-	</main></div></div></div></div><footer id="footer-main"><div id="footer-main-primary"><div class="container"><div class="row"><div class="content accordion-mobile"></div></div></div></div><div id="footer-main-secondary"><div class="container"><div class="row"><div class="content accordion-mobile"><div id="contact-column" class="footer-column col-xs-12"><div id="business-contact" data-component="contactInfo"><span class="item-label">Contact us</span><span class="header-contact-phone">Phone: 754-400-9834 or E-Mail: </span>
+	</main></div></div></div></div><footer id="footer-main"><div id="footer-main-primary"><div class="container"><div class="row"><div class="content accordion-mobile"></div></div></div></div><div id="footer-main-secondary"><div class="container"><div class="row"><div class="content accordion-mobile"><div id="contact-column" class="footer-column col-xs-12"><div id="business-contact" data-component="contactInfo"><span class="item-label">Contact us</span>
                     |
                 <span class="header-contact-email"><a href="mailto:Info-concept@mail.com">Info-concept@mail.com</a></span></div><div id="support-text" data-component="supportEmail">
             For product questions or issues, please send requests to:
