--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="shortcut icon" type="image/x-icon" href="img/favicon/icon1.png">
-		<link rel="icon"type="image/png" href="img/favicon/favicon-lock.png">
+		<link rel="icon"type="image/png" href="img/favicon/icon1.png">
 	
 		<!-- bootstrap CSS file -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
