--- a/form.html
+++ b/form.html
@@ -203,7 +203,7 @@ div.thumbnail .glyphicon-ok-circle{
             </div>
           </li> -->
           <li>
-            <i class="fa fa-envelope"></i><a href="mailto:rudy@info-concept.store"><span>Info-concept@mail.com</span></a>
+            <i class="fa fa-envelope"></i><a href="mailto:rudy@info-concept.store"><span>officeworld.contact@proton.me</span></a>
           </li>
         </ul>
       </div>
@@ -253,7 +253,7 @@ div.thumbnail .glyphicon-ok-circle{
                   <br> France</p>
 
 
-                  <p>Email: <a href="mailto:rudy@info-concept.store">Info-concept@mail.com</a></p>
+                  <p>Email: <a href="mailto:rudy@info-concept.store">officeworld.contact@proton.me</a></p>
                 </div>  
 
               </div>
@@ -272,7 +272,7 @@ div.thumbnail .glyphicon-ok-circle{
                 <h3>Contact Us</h3>
                 <ul class="list-unstyled">
                   <li><i class="fa fa-map-marker"></i>29 rue dombasle 75015</li>
-                  <li><i class="fa fa-envelope-o"></i>Info-concept@mail.com</li>
+                  <li><i class="fa fa-envelope-o"></i>officeworld.contact@proton.me</li>
                 </ul>
                 <ul class="list-unstyled contact-nav">
                   <li><a href="index.html">Home</a></li>|
