--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						</div>
 					</li> -->
 					<li>
-						<i class="fa fa-envelope"></i><a  href="mailto:Info-concept@mail.com"><span>Info-concept@mail.com</span></a>
+						<i class="fa fa-envelope"></i><a  href="mailto:officeworld.contact@proton.me"><span>officeworld.contact@proton.me</span></a>
 					</li>
 				</ul>
 			</div>
@@ -241,7 +241,7 @@
 								<h3>Contact Us</h3>
 								<ul class="list-unstyled">
 									<li><i class="fa fa-map-marker"></i>29 rue dombasle 75015</li>
-									<li><i class="fa fa-envelope-o"></i>Info-concept@mail.com</li>
+									<li><i class="fa fa-envelope-o"></i>officeworld.contact@proton.me</li>
 								</ul>
 								<ul class="list-unstyled contact-nav">
 									<li><a href="index.html">Home</a></li>|
