--- a/login.html
+++ b/login.html
@@ -38,12 +38,20 @@
   </style>
 </head>
 <body>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center">
+        <a href="/" class="logo">
+          <img src="logo.png" alt="Office World Logo" class="img-fluid" style="max-width: 50%;">
+        </a>
+      </div>
+    </div>
   <div class="container my-5">
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="card">
           <div class="card-header">
-            <h4>Office World - Customer Login</h4>
+            <h4>Customer Login</h4>
           </div>
           <div class="card-body" id="login-form">
             <form id="login-form">
