--- a/index.html
+++ b/index.html
@@ -24,27 +24,6 @@
 
 	</head>
 	<body>
-		<section class="nav-top-bar">
-			<div class="container">
-				<ul class="list-unstyled">
-					<!-- <li>
-						<div class="dropdown language-selector">
-							<div class="btn-group">
-								<button type="button" class="btn language-btn">English</button>
-								<button type="button" data-toggle="dropdown" id="language" aria-haspopup="true" aria-expanded="false" class="btn language-btn dropdown-toggle">
-								<span class="caret"></span>
-								<span class="sr-only">Toogle Dropdown</span>
-								</button>
-								<ul class="dropdown-menu" aria-labelledby="language">
-									<li><a href="#">Español</a></li>
-								</ul>
-							</div>
-						</div>
-					</li> -->
-					<li>
-						<i class="fa fa-envelope"></i><a  href="mailto:officeworld.contact@proton.me"><span>officeworld.contact@proton.me</span></a>
-					</li>
-				</ul>
 			</div>
 		</section>
 		<nav class="navbar navbar-default">
@@ -57,6 +36,7 @@
 					<span class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand" href="index.html"><img src="img/logo-black.png"></a>
+
 				</div>
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-right">
@@ -67,49 +47,50 @@
 					</div><!-- /.navbar-collapse -->
 					</div><!-- /.container-fluid -->
 				</nav>
-				<!--top slider-->
-				<div id="myCarousel" class="carousel slide carousel-container" data-ride="carousel">
-					<!-- Indicators -->
-					<ol class="carousel-indicators">
-						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-						<li data-target="#myCarousel" data-slide-to="1"></li>
-						<li data-target="#myCarousel" data-slide-to="2"></li>
-					</ol>
-					<!-- Wrapper for slides -->
-					<div class="carousel-inner" role="listbox">
-						<div class="item active ink-toner">
-							<div class="title-slider ">
-								<h2 class="headline-ink-toner">Ink & Toner</h2>
-								<h3 class="sub-headline-ink-toner">All the brands, colors, and cartridges to keep you running</h3>
-							</div>
-							<img src="img/slider/ink-toner.jpg" alt="imagen2">
-						</div>
-						<div class="item printers-copiers">
-							<div class="title-slider ">
-								<h2 class="headline-printers-copiers">Printers & Copiers</h2>
-								<h3 class="sub-headline-printers-copiers">Realiable performance, quality printing.</h3>
-							</div>
-							<img src="img/slider/printers-copiers.jpg" alt="imagen1">
-						</div>
-						<div class="item storage-media">
-							<div class="title-slider ">
-								<h2 class="headline-storage-media">Storage Media</h2>
-								<h3 class="sub-headline-storage-media">Portability and durability at your fingertips</h3>
-							</div>
-							<img src="img/slider/storage-media.jpg" alt="imagen3">
-						</div>
-					</div>
-					<!-- Left and right controls -->
-					<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-						<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-						<span class="sr-only">Previous</span>
-					</a>
-					<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-						<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-						<span class="sr-only">Next</span>
-					</a>
-				</div>
-				<section class="welcome-section">
+<!--top slider-->
+<div id="myCarousel" class="carousel slide carousel-container" data-ride="carousel">
+	<!-- Indicators -->
+	<ol class="carousel-indicators">
+	  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+	  <li data-target="#myCarousel" data-slide-to="1"></li>
+	  <li data-target="#myCarousel" data-slide-to="2"></li>
+	</ol>
+	<!-- Wrapper for slides -->
+	<div class="carousel-inner" role="listbox">
+	  <div class="item active ink-toner">
+		<div class="title-slider ">
+		  <h2 class="headline-ink-toner"></h2>
+		  <h3 class="sub-headline-ink-toner"></h3>
+		</div>
+		<a href="cryptpad-org/index.html">
+		  <img src="img/slider/unnamed.png" alt="imagen2">
+		</a>
+	  </div>
+	  <div class="item printers-copiers">
+		<div class="title-slider ">
+		  <h2 class="headline-printers-copiers">Printers & Copiers</h2>
+		  <h3 class="sub-headline-printers-copiers">Realiable performance, quality printing.</h3>
+		</div>
+		<img src="img/slider/printers-copiers.jpg" alt="imagen1">
+	  </div>
+	  <div class="item storage-media">
+		<div class="title-slider ">
+		  <h2 class="headline-storage-media">Storage Media</h2>
+		  <h3 class="sub-headline-storage-media">Portability and durability at your fingertips</h3>
+		</div>
+		<img src="img/slider/storage-media.jpg" alt="imagen3">
+	  </div>
+	</div>
+	<!-- Left and right controls -->
+	<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+	  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+	  <span class="sr-only">Previous</span>
+	</a>
+	<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+	  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+	  <span class="sr-only">Next</span>
+	</a>
+  </div>				<section class="welcome-section">
 					<div class="container">
 						<div class="row">
 							<div class="col-xs-12 col-sm-6">
