--- a/cryptpad-org/index.html
+++ b/cryptpad-org/index.html
@@ -108,7 +108,7 @@
 
 <section id="try-cryptpad">
     <p>CryptPad is a collaborative office suite that is end-to-end encrypted and open-source.</p>
-    <a class="fake-button" href="../instancescryptpad/instancescryptpad.html">Try CryptPad <i class="fa fa-arrow-right"></i></a>
+    <a class="fake-button" href="../pricingcryptpad/pricing.html">Pricing <i class="fa fa-arrow-right"></i></a>
 </section>
 
 <section class="features">
