--- a/pricingcryptpad/pricing.html
+++ b/pricingcryptpad/pricing.html
@@ -53,7 +53,7 @@
     
     
         <li>
-            <a href="../aboutcryptpad/aboutcryptpad.htmlcryptpad.html" class="btn">
+            <a href="../aboutcryptpad/aboutcryptpad.html" class="btn">
                 <i class="fa fa-question-circle-o" aria-hidden="true"></i>
                 <span>About</span>
             </a>
