--- a/form.html
+++ b/form.html
@@ -214,22 +214,16 @@ div.thumbnail .glyphicon-ok-circle{
               <hr class="line-contact-us">
               <div class="col-xs-12 col-md-6">
 
-                <div>
-                  <h4>Office World</h4>
-
-                  <p>To contact us, use the information on the left sidebar <br>or
-                  simply fill out the form on the right to send us a message.</p>
-
-                </div>
 
                 <div>
                   <h4 class="company-info">Company Contact Information</h4>
                   <hr class="line-contact-form-right">
-
-                  <p>29 rue dombasle 75015<br>  
-                  <br> France</p>
-
-
+                  <p>POS PUBLISHER<br> 
+                  <p>29 RUE DOMBASLE<br>
+                  <p>75015 PARIS<br>  
+                  <p>FRANCE<br>
+                  <br>TVA: FR23930426267</p>
+                  <p>Siret: 93042626700017</p>
                   <p>Email: <a href="mailto:rudy@info-concept.store">officeworld.contact@proton.me</a></p>
                 </div>  
 
