--- a/form.html
+++ b/form.html
@@ -218,12 +218,12 @@ div.thumbnail .glyphicon-ok-circle{
                 <div>
                   <h4 class="company-info">Company Contact Information</h4>
                   <hr class="line-contact-form-right">
-                  <p>POS PUBLISHER<br> 
-                  <p>29 RUE DOMBASLE<br>
-                  <p>75015 PARIS<br>  
+                  <p>POS MEDIA<br> 
+                  <p>23 RUE DU PETIT POTET<br>
+                  <p>21000 DIJON<br>  
                   <p>FRANCE<br>
-                  <br>TVA: FR23930426267</p>
-                  <p>Siret: 93042626700017</p>
+                  <br>TVA: FR11933274474</p>
+                  <p>Siret: 93327447400016</p>
                   <p>Email: <a href="mailto:rudy@info-concept.store">officeworld.contact@proton.me</a></p>
                 </div>  
 
@@ -242,7 +242,7 @@ div.thumbnail .glyphicon-ok-circle{
               <div class="col-xs-12 col-sm-6">
                 <h3>Contact Us</h3>
                 <ul class="list-unstyled">
-                  <li><i class="fa fa-map-marker"></i>29 rue dombasle 75015</li>
+                  <li><i class="fa fa-map-marker"></i>23 RUE DU PETIT POTET 21000</li>
                   <li><i class="fa fa-envelope-o"></i>officeworld.contact@proton.me</li>
                 </ul>
                 <ul class="list-unstyled contact-nav">
