--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 							<div class="col-xs-12 col-sm-6">
 								<h3>Contact Us</h3>
 								<ul class="list-unstyled">
-									<li><i class="fa fa-map-marker"></i>29 rue dombasle 75015</li>
+									<li><i class="fa fa-map-marker"></i>23 RUE DU PETIT POTET 21000</li>
 									<li><i class="fa fa-envelope-o"></i>officeworld.contact@proton.me</li>
 								</ul>
 								<ul class="list-unstyled contact-nav">
